# ex_windows_api_dataprotection

./: .gitignore  README.md  RELEASE.md  checksum-Elixir.Windows.API.DataProtection.Native.exs  demo.exs  demo.livemd  generate_checksum.cmd  mix.exs
.github/workflows/: ci.yml  ci.yml_ignore  elixir-ci.yml  release.yml  rust-ci.yml
lib/: data_protection.ex
lib/internal/: native.ex
native/ex_windows_api_dataprotection/: Cargo.toml
native/ex_windows_api_dataprotection/src/: lib.rs
native/ex_windows_api_dataprotection_rustler/: Cargo.toml
native/ex_windows_api_dataprotection_rustler/src/: lib.rs
test/: windows_api_dataprotection.exs  windows_api_dataprotection_test.exs
