[package]
name = "ex_windows_api_dataprotection"
version = "0.1.3"
edition = "2021"
authors = ["Dr. Christian Geuer-Pollmann <chgeuer@microsoft.com>"]

[lib]
name = "ex_windows_api_dataprotection"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.30.0" 
winapi = { version = "0.3", features = ["winbase"] }

# [features]
# default = ["nif_version_2_15"]
# # Feature necessary for Rustler Precompiled.
# nif_version_2_15 = ["rustler/nif_version_2_15"]