[package]
name = "ex_windows_api_dataprotection_rustler"
version = "0.1.0"
edition = "2021"
authors = ["Dr. Christian Geuer-Pollmann <chgeuer@microsoft.com>"]

[lib]
name = "ex_windows_api_dataprotection_rustler"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.30.0" 
winapi = { version = "0.3", features = ["winbase"] }
